[refs #105524] Main menu (navbar): fix social icon spacing problem.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6237,6 +6237,7 @@ div.pagination.listingBar span.current {
 .nav.navbar-nav.land-social-icons.collapsed {
   float: left;
   margin-left: 10px;
+  display: contents;
 }
 
 .navbar-toggle {
